WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136758
Fix casing in method name - formatNumberForCustomCSSText
https://bugs.webkit.org/show_bug.cgi?id=136758
Summary
Fix casing in method name - formatNumberForCustomCSSText
Joseph Pecoraro
Reported
2014-09-11 13:54:22 PDT
-CSSPrimitiveValue::formatNumberForcustomCSSText +CSSPrimitiveValue::formatNumberForCustomCSSText
Attachments
[PATCH] Proposed Fix
(2.34 KB, patch)
2014-09-11 13:55 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2014-09-11 13:55:04 PDT
Created
attachment 237986
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 2
2014-09-12 13:17:58 PDT
Comment on
attachment 237986
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 237986 Committed
r173570
: <
http://trac.webkit.org/changeset/173570
>
WebKit Commit Bot
Comment 3
2014-09-12 13:18:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug