Fix casing in method name - formatNumberForCustomCSSText https://bugs.webkit.org/show_bug.cgi?id=136758

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-09-12
Reviewed by Benjamin Poulain.

* css/CSSPrimitiveValue.cpp:
(WebCore::CSSPrimitiveValue::formatNumberForCustomCSSText):
(WebCore::CSSPrimitiveValue::customCSSText):
(WebCore::CSSPrimitiveValue::formatNumberForcustomCSSText): Deleted.
* css/CSSPrimitiveValue.h:

Canonical link: https://commits.webkit.org/154605@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173570 268f45cc-cd09-0410-ab3c-d52691b4dbfc